# LearningSymmetricShapes

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  usage.txt
Example/off/: airplane_0.off  airplane_1628.off  car_20.off  car_559.off
python/: .dockerignore  Dockerfile  README.md  checkpoint_to_pb_converter.py  experiment_test.py  experiment_train.py  pb_to_tflite_converter.py
python/converter/: Dockerfile  checkpoint_to_pb_converter.py  pb_to_tflite_converter.py
python/data/: dataset.py  generateMask.py  loaders.py  utils.py
python/layers/: resnet.py
python/models/: autoencoder_128_128_3.py  predict.py  train.py
python/savedModel/LSS_airplane/: model.ckpt-35424.data-00000-of-00001  model.ckpt-35424.index
python/savedModel/LSS_car/: model.ckpt-14850.data-00000-of-00001  model.ckpt-14850.index
source/: Main.cpp  Main.h  Parameterization.cpp  Parameterization.h  Preprocess.cpp  Preprocess.h  Texter.cpp  Texter.h  cleanSlice.mlx  include.cpp  include.h  naturalorder.h
